recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:11: error: value ** is not a member of Double
           gauche(angle**2:Double)}
                       ^